# repo-template

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  codecov.yaml  sonar-project.properties  suppressions.txt
.github/workflows/: build-and-run.yml  build_and_test.yml  sonarcloud.yml
src/app/: CMakeLists.txt  app.cc  app.hh  main.cc
src/lib/: CMakeLists.txt
src/lib/include/StubLib/: lib.hh
src/lib/src/: lib.cc
tests/lib/: tests.cc
